Add compare functionality

--- a/city.html
+++ b/city.html
@@ -117,9 +117,8 @@
                     </div>
                 </div>
                 <div class="col-sm-2">
-                    <div class="small-info">
-                        <span><span class="glyphicon glyphicon-tower"></span>Mayor</span>
-                        <h2 id="top-info-mayor" class="margin10 top-info"></h2>
+                    <div id="compare-box" class="small-info">
+                        <button id="compare-button" type="button" class="btn btn-success center-block" onclick="compare()">Compare</button>
                     </div>
                 </div>
             </div>
