Add both dropdowns to the compare page

--- a/compare.html
+++ b/compare.html
@@ -85,23 +85,38 @@
         <!-- Dropdown -->
         <div class="row ninety">
             <div class="col-sm-6">
-                <div></div>
+                <div id="dropdown1" class="dropdown center-block" style="width: 200px; align-self: center;">
+                    <button class="btn btn-default dropdown-toggle" style="width: 100%" type="button" data-toggle="dropdown">Select a city...
+                    <span class="caret" style="margin-left: 10px;"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">Toronto (Canada)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">Vancouver (Canada)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">Montreal (Canada)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">New York (USA)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">Los Angeles (USA)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">London (UK)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">Paris (France)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">Shanghai (China)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">Tokyo (Japan)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 1)">Bucharest (Romania)</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="col-sm-6">
-                <div id="dropdown" class="dropdown center-block" style="width: 130px; align-self: center;">
-                    <button class="btn btn-success dropdown-toggle" style="width: 100%" type="button" data-toggle="dropdown">Compare to
-                    <span class="caret" style="margin-left: 5px;"></span></button>
+                <div id="dropdown2" class="dropdown center-block" style="width: 200px; align-self: center;">
+                    <button class="btn btn-default dropdown-toggle" style="width: 100%" type="button" data-toggle="dropdown">Select a city...
+                    <span class="caret" style="margin-left: 10px;"></span></button>
                     <ul class="dropdown-menu">
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">Toronto (Canada)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">Vancouver (Canada)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">Montreal (Canada)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">New York (USA)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">Los Angeles (USA)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">London (UK)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">Paris (France)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">Shanghai (China)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">Tokyo (Japan)</a></li>
-                        <li><button class="btn btn-link" onclick="dropdownSelect(this)">Bucharest (Romania)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">Toronto (Canada)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">Vancouver (Canada)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">Montreal (Canada)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">New York (USA)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">Los Angeles (USA)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">London (UK)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">Paris (France)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">Shanghai (China)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">Tokyo (Japan)</a></li>
+                        <li><button class="btn btn-link" onclick="dropdownSelect(this, 2)">Bucharest (Romania)</a></li>
                     </ul>
                 </div>
             </div>
