Add compare title to compare page

--- a/compare.html
+++ b/compare.html
@@ -82,7 +82,12 @@
             </div>
         </div>
 
-        <!-- Dropdown -->
+        <!-- Page Title -->
+        <div class="row ninety">
+            <div class="col-sm-12" style="font-size: 42pt; font-weight: bold; text-align: center">COMPARE CITIES</div>
+        </div>
+        <hr />
+        <!-- Dropdowns -->
         <div class="row ninety">
             <div class="col-sm-6">
                 <div id="dropdown1" class="dropdown center-block" style="width: 200px; align-self: center;">
