Add initial login functionality

--- a/compare.html
+++ b/compare.html
@@ -15,6 +15,7 @@
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <script src="js/compare.js"></script>
+        <script src="js/users.js"></script>
     </head>
     <body>
         <!-- Navigation -->
