--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" href="css/index.css">
 		<script type="text/javascript" src="js/index.js"></script>
+		<script src="js/users.js"></script>
 	</head>
 	<body>
 		<!-- Navigation -->
