--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <input id="login-username" type="text" class="form-control" placeholder="Username">
                             <input id="login-password" type="password" class="form-control" placeholder="Password">
                         </div>
-                        <button type="submit" class="btn btn-default">Login</button>
+                        <input type="button" class="btn btn-default" value="Login" onclick="login()"></button>
                     </form>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
