--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <input id="login-username" type="text" class="form-control" placeholder="Username">
                             <input id="login-password" type="password" class="form-control" placeholder="Password">
                         </div>
-                        <input type="button" class="btn btn-default" value="Login" onclick="login()"></button>
+                        <input type="button" class="btn btn-default" value="Login" onclick="login()"></input>
                     </form>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
@@ -60,7 +60,10 @@
                         </div>
                         <hr />
                         <div class="panel-body" style="width: 85%; margin: auto;">
-                            <div class="form-group">
+							<div id="registration-success" style="display:none">
+								<p style="text-align: center">Welcome to CityScout! You have successfuly registered.</p>
+							</div>
+                            <div id="registration-form" class="form-group">
                                 <label for="inputName" class="control-label">Username</label>
                                 <input id="register-username" type="text" class="form-control" placeholder="Username">
                                 <p class="help-block">Username can contain any letters or numbers, without spaces.</p>
@@ -75,7 +78,8 @@
                                 <p class="help-block">Please provide a valid E-mail address.</p>
                             </div>
                             <hr />
-                            <button type="button" class="btn btn-success center-block" data-dismiss="modal" onclick="register()">Register</button>
+                            <button type="button" class="btn btn-success center-block" onclick="register()" id="registration-register">Register</button>
+							<button type="button" class="btn btn-success center-block" data-dismiss="modal" style="display:none" id="registration-done">Done</button>
                         </div>
                     </div>
                 </div>
