--- a/compare.html
+++ b/compare.html
@@ -61,6 +61,9 @@
                         </div>
                         <hr />
                         <div class="panel-body" style="width: 85%; margin: auto;">
+                            <div id="registration-success" style="display:none">
+								<p style="text-align: center">Welcome to CityScout! You have successfuly registered.</p>
+							</div>
                             <div class="form-group">
                                 <label for="inputName" class="control-label">Username</label>
                                 <input id="register-username" type="text" class="form-control" placeholder="Username">
@@ -76,7 +79,8 @@
                                 <p class="help-block">Please provide a valid E-mail address.</p>
                             </div>
                             <hr />
-                            <button type="button" class="btn btn-success center-block" data-dismiss="modal" onclick="register()">Register</button>
+                            <button type="button" class="btn btn-success center-block" onclick="register()" id="registration-register">Register</button>
+							<button type="button" class="btn btn-success center-block" data-dismiss="modal" style="display:none" id="registration-done">Done</button>
                         </div>
                     </div>
                 </div>
