added missing users script

--- a/city.html
+++ b/city.html
@@ -19,6 +19,7 @@
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <script src="js/city.js"></script>
         <script src="js/rateyo.js"></script>
+         <script src="js/users.js"></script>
     </head>
     <body>
         <!-- Navigation -->
