--- a/city.html
+++ b/city.html
@@ -40,10 +40,9 @@
                         <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li class="active"><a href="index.html">Cities</a></li>
                         <li><a href="compare.html">Compare</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Statistics</a></li>
                     </ul>
                </div>
              </div>
