--- a/compare.html
+++ b/compare.html
@@ -41,7 +41,7 @@
                         <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Cities</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="compare.html">Compare</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
