--- a/city.html
+++ b/city.html
@@ -14,6 +14,7 @@
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
         <script src="js/city.js"></script>
+        <script src="js/comments.js"></script>
         <script src="js/users.js"></script>
     </head>
     <body>
