Fixed compare functionality and comment functionality

--- a/city.html
+++ b/city.html
@@ -9,13 +9,15 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.2.0/jquery.rateyo.min.js"></script>
+        <script src="js/comments.js"></script>
+        <script src="js/city.js"></script>
+        <script src="js/users.js"></script>
         <!-- CSS Stylesheets -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rateYo/2.2.0/jquery.rateyo.min.css">
         <link href="css/city.css" rel="stylesheet">
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-        <script src="js/city.js"></script>
-        <script src="js/comments.js"></script>
-        <script src="js/users.js"></script>
     </head>
     <body>
         <!-- Navigation -->
@@ -330,7 +332,7 @@
             </div>
             <hr />
             <div class="row ninety">
-                <div class="col-sm-8">
+                <div class="col-sm-12">
                     <div class="panel">
                         <div class="panel-heading"><h3><span class="glyphicon glyphicon-comment"></span>Leave a comment</h3></div>
                         <hr />
@@ -379,7 +381,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4"></div>
                 <hr>
             </div>
             <hr />
