--- a/compare.html
+++ b/compare.html
@@ -41,7 +41,7 @@
                         <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Cities</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="compare.html">Compare</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
@@ -61,9 +61,6 @@
                         </div>
                         <hr />
                         <div class="panel-body" style="width: 85%; margin: auto;">
-                            <div id="registration-success" style="display:none">
-								<p style="text-align: center">Welcome to CityScout! You have successfuly registered.</p>
-							</div>
                             <div class="form-group">
                                 <label for="inputName" class="control-label">Username</label>
                                 <input id="register-username" type="text" class="form-control" placeholder="Username">
@@ -79,8 +76,7 @@
                                 <p class="help-block">Please provide a valid E-mail address.</p>
                             </div>
                             <hr />
-                            <button type="button" class="btn btn-success center-block" onclick="register()" id="registration-register">Register</button>
-							<button type="button" class="btn btn-success center-block" data-dismiss="modal" style="display:none" id="registration-done">Done</button>
+                            <button type="button" class="btn btn-success center-block" data-dismiss="modal" onclick="register()">Register</button>
                         </div>
                     </div>
                 </div>
