--- a/city.html
+++ b/city.html
@@ -32,25 +32,30 @@
                     <a id="brand-name" class="navbar-brand" href="index.html">CityScout</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
-                    <form class="navbar-form navbar-right">
+                    <form class="navbar-form navbar-right" id="logInForm">
                         <div class="form-group">
                             <input id="login-username" type="text" class="form-control" placeholder="Username">
                             <input id="login-password" type="password" class="form-control" placeholder="Password">
                         </div>
                         <input type="button" class="btn btn-default" value="Login" onclick="login()"></input>
                     </form>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+					<script type="text/javascript"> //script must be here
+						if(sessionStorage.getItem("userId") != null){
+							$("#logInForm").hide();
+						}	
+					</script>
+					<ul class="nav navbar-nav navbar-right">
+                        <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup" id="signUpButton"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+						<li id="signOutButton"><a type="button" class="btn btn-link" onclick="signOut()"><span class="glyphicon glyphicon-user"></span> Sign Out</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
+					<ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">Cities</a></li>
-                        <li><a href="compare.html">Compare</a></li>
+                        <li id="compareLink"><a href="compare.html">Compare</a></li>
                         <li><a href="#">About</a></li>
                     </ul>
                </div>
              </div>
         </nav>
-
         <!-- Registration Modal -->
         <div id="signup" class="modal fade" role="dialog">
             <div class="modal-dialog">
@@ -61,7 +66,7 @@
                             <h3 style="width: 90%"><span class="glyphicon glyphicon-user"></span>Sign Up</h3>
                             <button type="button" class="close" data-dismiss="modal" style="width:10%">&times;</button>
                         </div>
-                        <hr />
+						<hr />
                         <div class="panel-body" style="width: 85%; margin: auto;">
                             <div id="registration-success" style="display:none">
 								<p style="text-align: center">Welcome to CityScout! You have successfuly registered.</p>
@@ -124,11 +129,11 @@
                     </div>
                 </div>
                 <div class="col-sm-2">
-                    <div id="compare-box" class="small-info">
+                    <div id="compareBox" class="small-info">
                         <button id="compare-button" type="button" class="btn btn-success center-block" onclick="compare()">Compare</button>
                     </div>
-                </div>
-            </div>
+				</div>
+			</div>
             <hr />
             <!-- Header -->
             <div class="row ninety">
@@ -333,10 +338,10 @@
             <div class="row ninety">
                 <div class="col-sm-12">
                     <div class="panel">
-                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-comment"></span>Leave a comment</h3></div>
+                        <div class="panel-heading"><h3><span class="glyphicon glyphicon-comment"></span>Comments</h3></div>
                         <hr />
                         <div class="panel-body">
-                            <div class="row">
+                            <div id="commentEnterArea" class="row">
                                 <div class="col-sm-6">
                                     <div class="form-group">
                                         <textarea placeholder="Leave a comment" class="form-control"  id="commentText"></textarea>
