--- a/compare.html
+++ b/compare.html
@@ -30,16 +30,9 @@
                     <a id="brand-name" class="navbar-brand" href="index.html">CityScout</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
-                    <form class="navbar-form navbar-right">
-                        <div class="form-group">
-                            <input id="login-username" type="text" class="form-control" placeholder="Username">
-                            <input id="login-password" type="password" class="form-control" placeholder="Password">
-                        </div>
-                        <input type="button" class="btn btn-default" value="Login" onclick="login()"></input>
-                    </form>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a type="button" class="btn btn-link" data-toggle="modal" data-target="#signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    </ul>
+                        <li><a type="button" class="btn btn-link" onClick="signOutCompare()"><span class="glyphicon glyphicon-user"></span> Sign Out</a></li>
+					</ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="compare.html">Compare</a></li>
