Database,IndexPage, and CityPage
Display information from database,
Looked at index page image, we must cropped images
City page hides contribute buttons

--- a/city.html
+++ b/city.html
@@ -423,7 +423,7 @@
                             <h3>
                                 <span class="glyphicon glyphicon-home"></span>Housing
                             </h3>
-                            <a type="button" style="float: right;" class="btn btn-link" data-toggle="modal" data-target="#housingModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
+                            <a type="button" style="float: right;" class="btn btn-link contribute" data-toggle="modal" data-target="#housingModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
                         </div>
                         <hr />
                         <div class="panel-body">
@@ -446,7 +446,7 @@
                     <div class="panel">
                         <div class="panel-heading">
                             <h3><span class="glyphicon glyphicon-road"></span>Transportation</h3>
-                            <a type="button" style="float: right;" class="btn btn-link" data-toggle="modal" data-target="#transportationModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
+                            <a type="button" style="float: right;" class="btn btn-link contribute" data-toggle="modal" data-target="#transportationModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
                         </div>
                         <hr />
                         <div class="panel-body">
@@ -510,7 +510,7 @@
                     <div class="panel">
                         <div class="panel-heading">
                             <h3><span class="glyphicon glyphicon-film"></span>Entertainment</h3>
-                            <a type="button" style="float: right;" class="btn btn-link" data-toggle="modal" data-target="#entertainmentModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
+                            <a type="button" style="float: right;" class="btn btn-link contribute" data-toggle="modal" data-target="#entertainmentModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
                         </div>
                         <hr />
                         <div class="panel-body">
@@ -522,7 +522,7 @@
                     <div class="panel">
                         <div class="panel-heading">
                             <h3><span class="glyphicon glyphicon-cutlery"></span>Food</h3>
-                            <a type="button" style="float: right;" class="btn btn-link" data-toggle="modal" data-target="#foodModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
+                            <a type="button" style="float: right;" class="btn btn-link contribute" data-toggle="modal" data-target="#foodModal"><span class="glyphicon glyphicon-pencil"></span>Contribute</a>
                         </div>
                         <hr />
                         <div class="panel-body">
