--- a/index.html
+++ b/index.html
@@ -102,29 +102,33 @@
 								<h2> asdfasd </h2>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12">
-								<button type="button" class="btn btn-primary btm-lg btn-block btn-huge" data-toggle="modal" data-target="#signup">Button </button>
-							</div>
-						</div>	
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4">
 					<div class="container listContainer">
-						<h1> SELECT CITY </h1>
-						<ul>
-							<li class="city cityList" id="toronto" onClick="loadCity(this)">Toronto (Canada)</li>
-							<li class="city cityList" id="vancouver" onClick="loadCity(this)">Vancouver (Canada)</li>
-							<li class="city cityList" id="montreal" onClick="loadCity(this)">Montreal (Canada)</li>
-							<li class="city cityList" id="newYork" onClick="loadCity(this)">New York(USA)</li>
-							<li class="city cityList" id="losAngeles" onClick="loadCity(this)">Los Angeles(USA)</li>
-							<li class="city cityList" id="london" onClick="loadCity(this)">London (England)</li>
-							<li class="city cityList" id="paris" onClick="loadCity(this)">Paris (France)</li>
-							<li class="city cityList" id="shanghai" onClick="loadCity(this)">Shanghai(China)</li>
-							<li class="city cityList" id="tokyo" onClick="loadCity(this)">Tokyo(Japan)</li>
-							<li class="city cityList" id="bucharest" onClick="loadCity(this)">Bucharest(Romania)</li>
-						</ul>
-						<h4>More cities will be added soon</h4>
+						<div class="row">
+							<div class="col-lg-12 col-md-12">
+								<button type="button" class="btn btn-primary btm-lg btn-block btn-huge" data-toggle="modal" data-target="#signup">Accesses more content </button>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-lg-12 col-md-12">	
+								<h1> SELECT CITY </h1>
+								<ul>
+									<li class="city cityList" id="toronto" onClick="loadCity(this)">Toronto (Canada)</li>
+									<li class="city cityList" id="vancouver" onClick="loadCity(this)">Vancouver (Canada)</li>
+									<li class="city cityList" id="montreal" onClick="loadCity(this)">Montreal (Canada)</li>
+									<li class="city cityList" id="newYork" onClick="loadCity(this)">New York(USA)</li>
+									<li class="city cityList" id="losAngeles" onClick="loadCity(this)">Los Angeles(USA)</li>
+									<li class="city cityList" id="london" onClick="loadCity(this)">London (England)</li>
+									<li class="city cityList" id="paris" onClick="loadCity(this)">Paris (France)</li>
+									<li class="city cityList" id="shanghai" onClick="loadCity(this)">Shanghai(China)</li>
+									<li class="city cityList" id="tokyo" onClick="loadCity(this)">Tokyo(Japan)</li>
+									<li class="city cityList" id="bucharest" onClick="loadCity(this)">Bucharest(Romania)</li>
+								</ul>
+								<h4>More cities will be added soon</h4>
+							</div>	
+						</div>
 					</div>	
 				</div>
 			</div>
